.xmonad/xmonad.errors

xmonad.hs:495:44: error:
    • Variable not in scope: xmproc2 :: GHC.IO.Handle.Types.Handle
    • Perhaps you meant one of these:
        ‘xmproc0’ (line 471), ‘xmproc1’ (line 472)
    |
495 |                               >> hPutStrLn xmproc2 x                          -- xmobar on monitor 3
    |                                            ^^^^^^^
